<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            app:iconTint="@color/orange_unitel"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_baseline_person_24"
            app:iconTint="@color/orange_unitel"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_definicoes"
            android:icon="@drawable/ic_baseline_settings_24"
            app:iconTint="@color/orange_unitel"
            android:title="@string/menu_definicoes" />
    </group>
</menu>