<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    >


    <fragment
        android:id="@+id/nav_home"
        android:name="ao.co.proitconsulting.zoomunitel.ui.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="ao.co.proitconsulting.zoomunitel.ui.fragments.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_editarPerfilFragment"
            app:destination="@id/editarPerfilFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>
    <fragment
        android:id="@+id/nav_definicoes"
        android:name="ao.co.proitconsulting.zoomunitel.ui.fragments.definicoes.DefinicoesFragment"
        android:label="@string/menu_definicoes"
        tools:layout="@layout/fragment_definicoes" />

    <fragment
        android:id="@+id/editarPerfilFragment"
        android:name="ao.co.proitconsulting.zoomunitel.ui.fragments.perfil.EditarPerfilFragment"
        android:label="@string/editar_perfil"
        tools:layout="@layout/fragment_editar_perfil" />
</navigation>