<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bk"
    tools:context=".ui.fragments.cadastro.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_vertical"
            >


            <ImageView
                android:id="@+id/imgAppLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_unitel_blue"
                app:srcCompat="@drawable/zoom_unitel_logo"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="85dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />




            <RelativeLayout
                android:id="@+id/relative_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_border_light_orange"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgAppLogo"
                >

                <!--                        android:hint="@string/hint_email"-->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_account_circle_24"
                    android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                    android:drawablePadding="15dp"
                    android:hint="@string/email_ou_num_de_telefone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:textColor="@color/edittext_text_color"
                    android:textCursorDrawable="@drawable/edittext_cursor_color"
                    app:drawableTint="@color/orange_unitel" />

            </RelativeLayout>






            <RelativeLayout
                android:id="@+id/relative_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_border_light_orange"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relative_email"

                >


                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/orange_unitel"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:textColor="@color/edittext_text_color"
                    android:textCursorDrawable="@drawable/edittext_cursor_color"
                    app:tint_color="@color/orange_unitel" />

            </RelativeLayout>



            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_forgot_password"
                android:textColor="@color/txt_color_login"
                android:padding="4dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/relative_pass"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <android.widget.Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingLeft="100dp"
                android:paddingRight="100dp"
                android:text="@string/hint_btn_login"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/button_background_blue"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />



            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_registe_se"
                android:textColor="@color/txt_color_login"
                android:padding="4dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                />


            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit_bottom"
                style="@style/SpinKitView.ThreeBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:SpinKit_Color="@color/blue_unitel"
                android:visibility="gone"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@+id/txtRegister"
                app:layout_constraintStart_toStartOf="@+id/txtRegister"
                app:layout_constraintEnd_toEndOf="@+id/txtRegister"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>