<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.perfil.EditarPerfilFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        >

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="180dp"
                            android:layout_height="180dp"
                            android:layout_gravity="center"
                            android:paddingTop="@dimen/nav_header_vertical_spacing"
                            android:src="@color/orange_unitel" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/userPhoto"
                            android:layout_width="180dp"
                            android:layout_height="180dp"
                            android:layout_gravity="center"
                            android:clickable="true"
                            android:contentDescription="@string/nav_header_desc"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:paddingTop="@dimen/nav_header_vertical_spacing"
                            app:civ_border_color="@color/orange_unitel"
                            app:civ_border_width="2dp"
                            />





                        <TextView
                            android:id="@+id/txtUserNameInitial"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:maxLength="1"
                            android:maxLines="1"
                            android:padding="5dp"
                            android:text="@string/g"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/white"
                            android:textSize="110sp"
                            android:visibility="visible" />

                        <ImageView
                            android:src="@drawable/ic_baseline_add_a_photo_24"
                            app:tint="@color/transparentBlack"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_gravity="center"
                            android:alpha="0.6"
                            />




                    </FrameLayout>


                </LinearLayout>

            </FrameLayout>



            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:background="@drawable/box_border_grey">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/primeiro_nome"
                        android:inputType="textCapWords"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:padding="15dp"
                        android:textColor="@color/edittext_text_color"
                        android:textCursorDrawable="@drawable/edittext_cursor_color" />



                </RelativeLayout>


                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:background="@drawable/box_border_grey">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTelefone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/numero_telefone"
                        android:inputType="phone"
                        android:maxLength="21"
                        android:padding="15dp"
                        android:textColor="@color/edittext_text_color"
                        android:textCursorDrawable="@drawable/edittext_cursor_color"
                        />


                </RelativeLayout>


                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:background="@drawable/box_border_grey">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="15dp"
                        android:textColor="@color/edittext_text_color"
                        android:textCursorDrawable="@drawable/edittext_cursor_color"

                        />


                </RelativeLayout>



            </LinearLayout>

            <android.widget.Button
                android:id="@+id/btnSalvarPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:paddingLeft="100dp"
                android:paddingRight="100dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:text="@string/salvar_dados"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit_bottom"
                style="@style/SpinKitView.ThreeBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:SpinKit_Color="@color/spinKitView_color"
                android:visibility="gone"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@+id/btnSalvarPerfil"
                app:layout_constraintStart_toStartOf="@+id/btnSalvarPerfil"
                app:layout_constraintEnd_toEndOf="@+id/btnSalvarPerfil"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>